# claude_hooks_rs

./: .$hooks.drawio.bkp  .gitignore  Cargo.toml  README.md  dockerfile  hooks.drawio  justfile
.claude/: .settings.local.json
.github/workflows/: rust.yml
.qwen/: settings.json  settings.json.orig
common/: Cargo.toml
common/src/: lib.rs
post/: Cargo.toml  GIT_DIFF_CHECKER.md
post/src/: main.rs
post2/: Cargo.toml
post2/src/: main.rs
post_hook_for_stopping/: Cargo.toml
post_hook_for_stopping/src/: main.rs
pre/: Cargo.toml  INPUT_VALIDATOR_HOOK.md
pre/src/: main.rs
pre/tests/: .hook_tests.rs
stop/: Cargo.toml  GIT_DIFF_CHECKER.md
stop/src/: main.rs
