[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-as-inner = "0.7.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-inline-default = "1.0.1"
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"

[lints.clippy]
# Disallow the shortcuts
unwrap_used = "deny"
expect_used = "deny"
# Disallow the question mark operator
question_mark = "deny"
# Disallow common combinators that bypass matching
map_flatten = "deny"
# Optional: force explicit matches over simple 'if let' for results
single_match = "deny"
